feat: finished tasks test route and updated docs.json
